--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.springframework.jdbc.core=DEBUG
+spring.datasource.url=jdbc:sqlserver://facerecognization.database.windows.net:1433;database=SQLDB;user=eunbi@facerecognization;password=334600Oui@;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=eunbi
+spring.datasource.password=334600Oui@
+spring.datasource.initialization-mode=always
+server.port=8080
+
 
